30: General refactoring
Task-Url: http://www.bugheaven.com/bugzilla/FormScanner/show_bug.cgi?id=30