@@ -67,7 +67,7 @@ public class FormScannerModel {
 	public static final String COL_DY = "COL_DY";
 	public static final String ROW_DX = "ROW_DX";
 	public static final String ROW_DY = "ROW_DY";
-	
+
 	public static final String HISTORY_SEPARATOR = "|";
 
 	private String templatePath;
@@ -127,20 +127,15 @@ public class FormScannerModel {
 	private HashMap<String, Integer> crop = new HashMap<>();
 
 	public FormScannerModel() throws UnsupportedEncodingException {
-		String path = FormScannerModel.class
-				.getProtectionDomain().getCodeSource().getLocation().getPath();
+		String path = FormScannerModel.class.getProtectionDomain().getCodeSource().getLocation().getPath();
 		String installPath = URLDecoder.decode(path, "UTF-8");
 		installPath = StringUtils.substringBeforeLast(installPath, "lib");
-		installPath = StringUtils.defaultIfBlank(
-				System.getProperty("FormScanner_HOME"), installPath);
+		installPath = StringUtils.defaultIfBlank(System.getProperty("FormScanner_HOME"), installPath);
 
-		System.setProperty(
-				"log4j.configurationFile",
-				"file://" + installPath + "/config/log4j.xml");
+		System.setProperty("log4j.configurationFile", "file://" + installPath + "/config/log4j.xml");
 		logger = LogManager.getLogger(FormScannerModel.class.getName());
 
-		String installationLanguage = StringUtils.defaultIfBlank(
-				System.getProperty("FormScanner_LANGUAGE"),
+		String installationLanguage = StringUtils.defaultIfBlank(System.getProperty("FormScanner_LANGUAGE"),
 				System.getenv("FormScanner_LANGUAGE"));
 
 		String userHome = System.getProperty("user.home");
@@ -157,19 +152,14 @@ public class FormScannerModel {
 
 		propertiesPath = propertiesPath + "/properties/";
 
-		configurations = FormScannerConfiguration.getConfiguration(
-				propertiesPath, installPath + "/");
+		configurations = FormScannerConfiguration.getConfiguration(propertiesPath, installPath + "/");
 
-		templatePath = configurations.getProperty(
-				FormScannerConfigurationKeys.TEMPLATE_SAVE_PATH,
+		templatePath = configurations.getProperty(FormScannerConfigurationKeys.TEMPLATE_SAVE_PATH,
 				templatePath + "/FormScanner/templates/");
-		resultsPath = configurations.getProperty(
-				FormScannerConfigurationKeys.RESULTS_SAVE_PATH,
+		resultsPath = configurations.getProperty(FormScannerConfigurationKeys.RESULTS_SAVE_PATH,
 				resultsPath + "/FormScanner/results/");
 
-		lang = configurations.getProperty(
-				FormScannerConfigurationKeys.LANG,
-				getDefaultLanguage(installationLanguage));
+		lang = configurations.getProperty(FormScannerConfigurationKeys.LANG, getDefaultLanguage(installationLanguage));
 
 		String[] locales = StringUtils.split(lang, '_');
 		if (locales.length == 2) {
@@ -184,76 +174,56 @@ public class FormScannerModel {
 		FormScannerTranslation.setTranslation(installPath, lang);
 		FormScannerResources.setResources(installPath);
 
-		threshold = (Integer) configurations.getProperty(
-				FormScannerConfigurationKeys.THRESHOLD,
+		threshold = (Integer) configurations.getProperty(FormScannerConfigurationKeys.THRESHOLD,
 				FormScannerConfigurationKeys.DEFAULT_THRESHOLD);
-		density = (Integer) configurations.getProperty(
-				FormScannerConfigurationKeys.DENSITY,
+		density = (Integer) configurations.getProperty(FormScannerConfigurationKeys.DENSITY,
 				FormScannerConfigurationKeys.DEFAULT_DENSITY);
-		shapeSize = (Integer) configurations.getProperty(
-				FormScannerConfigurationKeys.SHAPE_SIZE,
+		shapeSize = (Integer) configurations.getProperty(FormScannerConfigurationKeys.SHAPE_SIZE,
 				FormScannerConfigurationKeys.DEFAULT_SHAPE_SIZE);
-		shapeType = ShapeType.valueOf(configurations.getProperty(
-				FormScannerConfigurationKeys.SHAPE_TYPE,
+		shapeType = ShapeType.valueOf(configurations.getProperty(FormScannerConfigurationKeys.SHAPE_TYPE,
 				FormScannerConfigurationKeys.DEFAULT_SHAPE_TYPE));
-		cornerType = CornerType.valueOf(configurations.getProperty(
-				FormScannerConfigurationKeys.CORNER_TYPE,
+		cornerType = CornerType.valueOf(configurations.getProperty(FormScannerConfigurationKeys.CORNER_TYPE,
 				FormScannerConfigurationKeys.DEFAULT_CORNER_TYPE));
-		resetAutoNumbering = (Boolean) configurations.getProperty(
-				FormScannerConfigurationKeys.RESET_AUTO_NUMBERING,
+		resetAutoNumbering = (Boolean) configurations.getProperty(FormScannerConfigurationKeys.RESET_AUTO_NUMBERING,
 				FormScannerConfigurationKeys.DEFAULT_RESET_AUTO_NUMBERING);
-		groupsEnabled = (Boolean) configurations.getProperty(
-				FormScannerConfigurationKeys.GROUPS_ENABLED,
+		groupsEnabled = (Boolean) configurations.getProperty(FormScannerConfigurationKeys.GROUPS_ENABLED,
 				FormScannerConfigurationKeys.DEFAULT_GROUPS_ENABLED);
-		questionNameTemplate = configurations.getProperty(
-				FormScannerConfigurationKeys.QUESTION_NAME_TEMPLATE,
+		questionNameTemplate = configurations.getProperty(FormScannerConfigurationKeys.QUESTION_NAME_TEMPLATE,
 				FormScannerConfigurationKeys.DEFAULT_QUESTION_NAME_TEMPLATE);
-		barcodeNameTemplate = configurations.getProperty(
-				FormScannerConfigurationKeys.BARCODE_NAME_TEMPLATE,
+		barcodeNameTemplate = configurations.getProperty(FormScannerConfigurationKeys.BARCODE_NAME_TEMPLATE,
 				FormScannerConfigurationKeys.DEFAULT_BARCODE_NAME_TEMPLATE);
-		groupNameTemplate = configurations.getProperty(
-				FormScannerConfigurationKeys.GROUP_NAME_TEMPLATE,
+		groupNameTemplate = configurations.getProperty(FormScannerConfigurationKeys.GROUP_NAME_TEMPLATE,
 				FormScannerConfigurationKeys.DEFAULT_GROUP_NAME_TEMPLATE);
-		historyGroupNameTemplate = new ArrayList<String>(
-				Arrays.asList(StringUtils.split(
-						configurations
-								.getProperty(
-										FormScannerConfigurationKeys.HISTORY_GROUP_NAME_TEMPLATE,
-										FormScannerConfigurationKeys.DEFAULT_GROUP_NAME_TEMPLATE),
-										HISTORY_SEPARATOR)));
+		historyGroupNameTemplate = new ArrayList<String>(Arrays.asList(
+				StringUtils.split(configurations.getProperty(FormScannerConfigurationKeys.HISTORY_GROUP_NAME_TEMPLATE,
+						FormScannerConfigurationKeys.DEFAULT_GROUP_NAME_TEMPLATE), HISTORY_SEPARATOR)));
 		historyBarcodeNameTemplate = new ArrayList<String>(
-				Arrays.asList(StringUtils.split(
-						configurations
-								.getProperty(
-										FormScannerConfigurationKeys.HISTORY_BARCODE_NAME_TEMPLATE,
+				Arrays.asList(
+						StringUtils.split(
+								configurations.getProperty(FormScannerConfigurationKeys.HISTORY_BARCODE_NAME_TEMPLATE,
 										FormScannerConfigurationKeys.DEFAULT_BARCODE_NAME_TEMPLATE),
-										HISTORY_SEPARATOR)));
+						HISTORY_SEPARATOR)));
 		historyQuestionNameTemplate = new ArrayList<String>(
-				Arrays.asList(StringUtils.split(
-						configurations
-								.getProperty(
-										FormScannerConfigurationKeys.HISTORY_QUESTION_NAME_TEMPLATE,
+				Arrays.asList(
+						StringUtils.split(
+								configurations.getProperty(FormScannerConfigurationKeys.HISTORY_QUESTION_NAME_TEMPLATE,
 										FormScannerConfigurationKeys.DEFAULT_QUESTION_NAME_TEMPLATE),
-										HISTORY_SEPARATOR)));
+						HISTORY_SEPARATOR)));
 
-		lookAndFeel = configurations.getProperty(
-				FormScannerConfigurationKeys.LOOK_AND_FEEL,
+		lookAndFeel = configurations.getProperty(FormScannerConfigurationKeys.LOOK_AND_FEEL,
 				FormScannerConfigurationKeys.DEFAULT_LOOK_AND_FEEL);
-		fontType = configurations.getProperty(
-				FormScannerConfigurationKeys.FONT_TYPE,
+		fontType = configurations.getProperty(FormScannerConfigurationKeys.FONT_TYPE,
 				FormScannerConfigurationKeys.DEFAULT_FONT_TYPE);
-		fontSize = (Integer) configurations.getProperty(
-				FormScannerConfigurationKeys.FONT_SIZE,
+		fontSize = (Integer) configurations.getProperty(FormScannerConfigurationKeys.FONT_SIZE,
 				FormScannerConfigurationKeys.DEFAULT_FONT_SIZE);
 		FormScannerFont.getFont(fontType, fontSize);
-		
+
 		crop.put(FormScannerConstants.TOP, 0);
 		crop.put(FormScannerConstants.LEFT, 0);
 		crop.put(FormScannerConstants.RIGHT, 0);
 		crop.put(FormScannerConstants.BOTTOM, 0);
 
-		String tmpl = configurations.getProperty(
-				FormScannerConfigurationKeys.TEMPLATE, (String) null);
+		String tmpl = configurations.getProperty(FormScannerConfigurationKeys.TEMPLATE, (String) null);
 		if (!StringUtils.isEmpty(tmpl)) {
 			FormScannerResources.setTemplate(templatePath + tmpl);
 			openTemplate(FormScannerResources.getTemplate(), false);
@@ -264,8 +234,8 @@ public class FormScannerModel {
 
 	private static String getDefaultLanguage(String installationLanguage) {
 		for (Language language : Language.values()) {
-			if (!language.getInstallationLanguages().isEmpty() && language
-					.getInstallationLanguages().contains(installationLanguage)) {
+			if (!language.getInstallationLanguages().isEmpty()
+					&& language.getInstallationLanguages().contains(installationLanguage)) {
 				return language.getValue();
 			}
 		}
@@ -274,19 +244,15 @@ public class FormScannerModel {
 
 	public void setDefaultFramePositions() {
 		for (Frame frame : Frame.values()) {
-			String pos = configurations.getProperty(
-					frame.getConfigurationKey(), (String) null);
+			String pos = configurations.getProperty(frame.getConfigurationKey(), (String) null);
 			Rectangle position;
 			if (pos == null) {
 				position = frame.getDefaultPosition();
 			} else {
 				String[] positions = StringUtils.split(pos, ',');
 
-				position = new Rectangle(
-						Integer.parseInt(positions[0]),
-						Integer.parseInt(positions[1]),
-						Integer.parseInt(positions[2]),
-						Integer.parseInt(positions[3]));
+				position = new Rectangle(Integer.parseInt(positions[0]), Integer.parseInt(positions[1]),
+						Integer.parseInt(positions[2]), Integer.parseInt(positions[3]));
 			}
 
 			setLastPosition(frame, position);
@@ -330,12 +296,10 @@ public class FormScannerModel {
 
 				try {
 					BufferedImage image = ImageIO.read(imageFile);
-					String name = FilenameUtils.removeExtension(imageFile
-							.getName());
+					String name = FilenameUtils.removeExtension(imageFile.getName());
 					filledForm = new FormTemplate(name);
 					createFormImageFrame(image, filledForm, Mode.VIEW);
-					renameFileFrame = new RenameFileFrame(
-							this, getFileNameByIndex(renamedFileIndex));
+					renameFileFrame = new RenameFileFrame(this, getFileNameByIndex(renamedFileIndex));
 					view.arrangeFrame(renameFileFrame);
 				} catch (Exception e) {
 					logger.debug("Error", e);
@@ -362,8 +326,7 @@ public class FormScannerModel {
 				try {
 					BufferedImage image = ImageIO.read(imageFile);
 					imageFrame.updateImage(image);
-					renameFileFrame = new RenameFileFrame(
-							this, getFileNameByIndex(renamedFileIndex));
+					renameFileFrame = new RenameFileFrame(this, getFileNameByIndex(renamedFileIndex));
 					view.arrangeFrame(renameFileFrame);
 				} catch (Exception e) {
 					logger.debug("Error", e);
@@ -395,19 +358,16 @@ public class FormScannerModel {
 					view.setScanAllControllersEnabled(false);
 					view.setScanCurrentControllersEnabled(false);
 
-					for (Entry<Integer, File> openedFile : openedFiles
-							.entrySet()) {
+					for (Entry<Integer, File> openedFile : openedFiles.entrySet()) {
 						analyzedFileIndex = openedFile.getKey();
 						fileListFrame.selectFile(analyzedFileIndex);
 						File imageFile = openedFiles.get(analyzedFileIndex);
 						try {
 							BufferedImage image = ImageIO.read(imageFile);
-							String name = FilenameUtils
-									.removeExtension(imageFile.getName());
+							String name = FilenameUtils.removeExtension(imageFile.getName());
 							filledForm = new FormTemplate(name, formTemplate);
 							filledForm.findCorners(image, threshold, density, cornerType, crop);
-							filledForm.findPoints(
-									image, threshold, density, shapeSize);
+							filledForm.findPoints(image, threshold, density, shapeSize);
 							filledForm.findAreas(image);
 							filledForms.put(filledForm.getName(), filledForm);
 						} catch (Exception e) {
@@ -417,18 +377,13 @@ public class FormScannerModel {
 					}
 
 					Date today = Calendar.getInstance().getTime();
-					SimpleDateFormat sdf = new SimpleDateFormat(
-							"yyyyMMddHHmmss");
-					File outputFile = new File(
-							resultsPath + FormScannerTranslation
-									.getTranslationFor(FormScannerTranslationKeys.RESULTS_DEFAULT_FILE) + "_" + sdf
-									.format(today) + ".csv");
-					File savedFile = fileUtils.saveCsvAs(
-							outputFile, filledForms, true);
-					configurations.setProperty(
-							FormScannerConfigurationKeys.RESULTS_SAVE_PATH,
-							FilenameUtils.getFullPath(savedFile
-									.getAbsolutePath()));
+					SimpleDateFormat sdf = new SimpleDateFormat("yyyyMMddHHmmss");
+					File outputFile = new File(resultsPath
+							+ FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.RESULTS_DEFAULT_FILE)
+							+ "_" + sdf.format(today) + ".csv");
+					File savedFile = fileUtils.saveCsvAs(outputFile, filledForms, true);
+					configurations.setProperty(FormScannerConfigurationKeys.RESULTS_SAVE_PATH,
+							FilenameUtils.getFullPath(savedFile.getAbsolutePath()));
 					configurations.store();
 
 					view.setRenameControllersEnabled(true);
@@ -446,8 +401,7 @@ public class FormScannerModel {
 					view.setScanCurrentControllersEnabled(true);
 
 					if (firstPass) {
-						analyzedFileIndex = fileListFrame
-								.getSelectedItemIndex();
+						analyzedFileIndex = fileListFrame.getSelectedItemIndex();
 						firstPass = false;
 					} else {
 						analyzedFileIndex++;
@@ -458,36 +412,29 @@ public class FormScannerModel {
 						File imageFile = openedFiles.get(analyzedFileIndex);
 						try {
 							BufferedImage image = ImageIO.read(imageFile);
-							String name = FilenameUtils
-									.removeExtension(imageFile.getName());
+							String name = FilenameUtils.removeExtension(imageFile.getName());
 							filledForm = new FormTemplate(name, formTemplate);
 							filledForm.findCorners(image, threshold, density, cornerType, crop);
-							filledForm.findPoints(
-									image, threshold, density, shapeSize);
+							filledForm.findPoints(image, threshold, density, shapeSize);
 							filledForm.findAreas(image);
 							points = filledForm.getFieldPoints();
 							areas = filledForm.getFieldAreas();
 							filledForms.put(filledForm.getName(), filledForm);
-							createFormImageFrame(
-									image, filledForm, Mode.MODIFY_POINTS);
+							createFormImageFrame(image, filledForm, Mode.MODIFY_POINTS);
 							createResultsGridFrame();
 						} catch (Exception e) {
 							logger.debug("Error", e);
 						}
 					} else {
 						Date today = Calendar.getInstance().getTime();
-						SimpleDateFormat sdf = new SimpleDateFormat(
-								"yyyyMMddHHmmss");
-						File outputFile = new File(
-								resultsPath + FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.RESULTS_DEFAULT_FILE) + "_" + sdf
-										.format(today) + ".csv");
-						File savedFile = fileUtils.saveCsvAs(
-								outputFile, filledForms, true);
-						configurations.setProperty(
-								FormScannerConfigurationKeys.RESULTS_SAVE_PATH,
-								FilenameUtils.getFullPath(savedFile
-										.getAbsolutePath()));
+						SimpleDateFormat sdf = new SimpleDateFormat("yyyyMMddHHmmss");
+						File outputFile = new File(resultsPath
+								+ FormScannerTranslation
+										.getTranslationFor(FormScannerTranslationKeys.RESULTS_DEFAULT_FILE)
+								+ "_" + sdf.format(today) + ".csv");
+						File savedFile = fileUtils.saveCsvAs(outputFile, filledForms, true);
+						configurations.setProperty(FormScannerConfigurationKeys.RESULTS_SAVE_PATH,
+								FilenameUtils.getFullPath(savedFile.getAbsolutePath()));
 						configurations.store();
 
 						view.disposeFrame(imageFrame);
@@ -524,14 +471,10 @@ public class FormScannerModel {
 				break;
 			}
 		} else {
-			JOptionPane
-					.showMessageDialog(
-							null,
-							FormScannerTranslation
-									.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_FOUND),
-							FormScannerTranslation
-									.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_FOUND_POPUP),
-							JOptionPane.WARNING_MESSAGE);
+			JOptionPane.showMessageDialog(null,
+					FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_FOUND),
+					FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_FOUND_POPUP),
+					JOptionPane.WARNING_MESSAGE);
 		}
 	}
 
@@ -606,8 +549,7 @@ public class FormScannerModel {
 		if (templateFile != null) {
 			try {
 				templateImage = ImageIO.read(templateFile);
-				String name = FilenameUtils.removeExtension(templateFile
-						.getName());
+				String name = FilenameUtils.removeExtension(templateFile.getName());
 				formTemplate = new FormTemplate(name);
 				formTemplate.findCorners(templateImage, threshold, density, cornerType, crop);
 				manageTemplateFrame = new ManageTemplateFrame(this);
@@ -624,19 +566,16 @@ public class FormScannerModel {
 		case FormScannerConstants.QUESTIONS_BY_ROWS:
 		case FormScannerConstants.QUESTIONS_BY_COLS:
 		case FormScannerConstants.RESPONSES_BY_GRID:
-			imageFrame = new ImageFrame(
-					this, templateImage, formTemplate, Mode.SETUP_POINTS);
+			imageFrame = new ImageFrame(this, templateImage, formTemplate, Mode.SETUP_POINTS);
 			break;
 		case FormScannerConstants.BARCODE:
-			imageFrame = new ImageFrame(
-					this, templateImage, formTemplate, Mode.SETUP_AREA);
+			imageFrame = new ImageFrame(this, templateImage, formTemplate, Mode.SETUP_AREA);
 			break;
 		}
 		view.arrangeFrame(imageFrame);
 	}
 
-	public void createFormImageFrame(BufferedImage image,
-			FormTemplate template, Mode mode) {
+	public void createFormImageFrame(BufferedImage image, FormTemplate template, Mode mode) {
 		if (imageFrame == null) {
 			imageFrame = new ImageFrame(this, image, template, mode);
 		} else {
@@ -671,15 +610,13 @@ public class FormScannerModel {
 						resetPoints();
 						resetAreas();
 
-						FormPoint orig = formTemplate.getCorners().get(
-								Corners.TOP_LEFT);
+						FormPoint orig = formTemplate.getCorners().get(Corners.TOP_LEFT);
 						double rotation = formTemplate.getRotation();
 
 						p1.rotoTranslate(orig, rotation, true);
 						p.rotoTranslate(orig, rotation, true);
 
-						HashMap<String, Double> delta = calcDelta(
-								rows, values, p1, p);
+						HashMap<String, Double> delta = calcDelta(rows, values, p1, p);
 
 						double rowsMultiplier;
 						double colsMultiplier;
@@ -696,8 +633,7 @@ public class FormScannerModel {
 									colsMultiplier = j;
 									break;
 								}
-								FormPoint pi = new FormPoint(
-										(p1.getX() + (delta.get("x") * colsMultiplier)),
+								FormPoint pi = new FormPoint((p1.getX() + (delta.get("x") * colsMultiplier)),
 										(p1.getY() + (delta.get("y") * rowsMultiplier)));
 								pi.rotoTranslate(orig, rotation, false);
 
@@ -715,10 +651,7 @@ public class FormScannerModel {
 										area.setCorner(Corners.BOTTOM_LEFT, pi);
 										break;
 									case 3:
-										area
-												.setCorner(
-														Corners.BOTTOM_RIGHT,
-														pi);
+										area.setCorner(Corners.BOTTOM_RIGHT, pi);
 										break;
 									}
 								}
@@ -748,8 +681,7 @@ public class FormScannerModel {
 		view.repaint();
 	}
 
-	private HashMap<String, Double> calcDelta(int rows, int values,
-			FormPoint p1, FormPoint p2) {
+	private HashMap<String, Double> calcDelta(int rows, int values, FormPoint p1, FormPoint p2) {
 		double dX = Math.abs((p2.getX() - p1.getX()));
 		double dY = Math.abs((p2.getY() - p1.getY()));
 
@@ -772,8 +704,7 @@ public class FormScannerModel {
 		return delta;
 	}
 
-	public void updateTemplateFields(String groupName,
-			HashMap<String, FormQuestion> fields) {
+	public void updateTemplateFields(String groupName, HashMap<String, FormQuestion> fields) {
 		formTemplate.addFields(groupName, fields);
 		resetPoints();
 	}
@@ -805,40 +736,26 @@ public class FormScannerModel {
 		formTemplate.setGroupsEnabled(groupsEnabled);
 		formTemplate.setCrop(crop);
 
-		File template = fileUtils
-				.saveToFile(templatePath, formTemplate, notify);
+		File template = fileUtils.saveToFile(templatePath, formTemplate, notify);
 
 		if (template != null) {
 			if (notify) {
-				JOptionPane
-						.showMessageDialog(
-								null,
-								FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_SAVED),
-								FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_SAVED_POPUP),
-								JOptionPane.INFORMATION_MESSAGE);
+				JOptionPane.showMessageDialog(null,
+						FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_SAVED),
+						FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_SAVED_POPUP),
+						JOptionPane.INFORMATION_MESSAGE);
 			}
-			templatePath = FilenameUtils
-					.getFullPath(template.getAbsolutePath());
-			String templateFile = FilenameUtils.getName(template
-					.getAbsolutePath());
-			configurations.setProperty(
-					FormScannerConfigurationKeys.TEMPLATE, templateFile);
-			configurations.setProperty(
-					FormScannerConfigurationKeys.TEMPLATE_SAVE_PATH,
-					templatePath);
+			templatePath = FilenameUtils.getFullPath(template.getAbsolutePath());
+			String templateFile = FilenameUtils.getName(template.getAbsolutePath());
+			configurations.setProperty(FormScannerConfigurationKeys.TEMPLATE, templateFile);
+			configurations.setProperty(FormScannerConfigurationKeys.TEMPLATE_SAVE_PATH, templatePath);
 			configurations.store();
 		} else {
 			if (notify) {
-				JOptionPane
-						.showMessageDialog(
-								null,
-								FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_SAVED),
-								FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_SAVED_POPUP),
-								JOptionPane.ERROR_MESSAGE);
+				JOptionPane.showMessageDialog(null,
+						FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_SAVED),
+						FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_SAVED_POPUP),
+						JOptionPane.ERROR_MESSAGE);
 			}
 		}
 	}
@@ -860,58 +777,38 @@ public class FormScannerModel {
 		try {
 			formTemplate = new FormTemplate(template);
 
-			threshold = formTemplate.getThreshold() < 0
-					? threshold : formTemplate.getThreshold();
-			density = formTemplate.getDensity() < 0 ? density : formTemplate
-					.getDensity();
-			shapeSize = formTemplate.getSize() < 0 ? shapeSize : formTemplate
-					.getSize();
-			shapeType = formTemplate.getShape() == null
-					? shapeType : formTemplate.getShape();
-			cornerType = formTemplate.getCornerType() == null
-					? cornerType : formTemplate.getCornerType();
+			threshold = formTemplate.getThreshold() < 0 ? threshold : formTemplate.getThreshold();
+			density = formTemplate.getDensity() < 0 ? density : formTemplate.getDensity();
+			shapeSize = formTemplate.getSize() < 0 ? shapeSize : formTemplate.getSize();
+			shapeType = formTemplate.getShape() == null ? shapeType : formTemplate.getShape();
+			cornerType = formTemplate.getCornerType() == null ? cornerType : formTemplate.getCornerType();
 			groupsEnabled = formTemplate.isGroupsEnabled();
-			
+
 			crop = formTemplate.getCrop();
 
-			if (!FormScannerConstants.CURRENT_TEMPLATE_VERSION
-					.equals(formTemplate.getVersion())) {
+			if (!FormScannerConstants.CURRENT_TEMPLATE_VERSION.equals(formTemplate.getVersion())) {
 				saveTemplate(false);
 				return true;
 			}
 			if (notify) {
-				JOptionPane
-						.showMessageDialog(
-								null,
-								FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_LOADED),
-								FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_LOADED_POPUP),
-								JOptionPane.INFORMATION_MESSAGE);
+				JOptionPane.showMessageDialog(null,
+						FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_LOADED),
+						FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_LOADED_POPUP),
+						JOptionPane.INFORMATION_MESSAGE);
 			}
-			templatePath = FilenameUtils
-					.getFullPath(template.getAbsolutePath());
-			String templateFile = FilenameUtils.getName(template
-					.getAbsolutePath());
-			configurations.setProperty(
-					FormScannerConfigurationKeys.TEMPLATE, templateFile);
-			configurations.setProperty(
-					FormScannerConfigurationKeys.TEMPLATE_SAVE_PATH,
-					templatePath);
+			templatePath = FilenameUtils.getFullPath(template.getAbsolutePath());
+			String templateFile = FilenameUtils.getName(template.getAbsolutePath());
+			configurations.setProperty(FormScannerConfigurationKeys.TEMPLATE, templateFile);
+			configurations.setProperty(FormScannerConfigurationKeys.TEMPLATE_SAVE_PATH, templatePath);
 			configurations.store();
 
 			return true;
-		} catch (ParserConfigurationException | SAXException | IOException
-				| HeadlessException e) {
+		} catch (ParserConfigurationException | SAXException | IOException | HeadlessException e) {
 			if (notify) {
-				JOptionPane
-						.showMessageDialog(
-								null,
-								FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_LOADED),
-								FormScannerTranslation
-										.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_LOADED_POPUP),
-								JOptionPane.ERROR_MESSAGE);
+				JOptionPane.showMessageDialog(null,
+						FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_LOADED),
+						FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.TEMPLATE_NOT_LOADED_POPUP),
+						JOptionPane.ERROR_MESSAGE);
 			}
 			logger.debug("Error", e);
 			return false;
@@ -924,22 +821,13 @@ public class FormScannerModel {
 		try {
 
 			if (osName.startsWith("Windows")) {
-				Runtime
-						.getRuntime()
-						.exec(
-								(new StringBuilder())
-										.append(
-												"rundll32   url.dll,FileProtocolHandler ")
-										.append(url).toString());
+				Runtime.getRuntime().exec(
+						(new StringBuilder()).append("rundll32   url.dll,FileProtocolHandler ").append(url).toString());
 			} else {
-				String browsers[] = { "firefox", "opera", "konqueror",
-						"epiphany", "mozilla", "netscape", "safari" };
+				String browsers[] = { "firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape", "safari" };
 				String browser = null;
 				for (int i = 0; i < browsers.length && browser == null; i++) {
-					if (Runtime
-							.getRuntime()
-							.exec(new String[] { "which", browsers[i] })
-							.waitFor() == 0) {
+					if (Runtime.getRuntime().exec(new String[] { "which", browsers[i] }).waitFor() == 0) {
 						browser = browsers[i];
 					}
 				}
@@ -948,14 +836,10 @@ public class FormScannerModel {
 					throw new Exception("Could not find web browser");
 				}
 
-				Runtime
-						.getRuntime().exec(
-								new String[] { browser,
-										FormScannerConstants.WIKI_PAGE });
+				Runtime.getRuntime().exec(new String[] { browser, FormScannerConstants.WIKI_PAGE });
 			}
 		} catch (Exception exception) {
-			System.out
-					.println("An error occured while trying to open the web browser!\n");
+			System.out.println("An error occured while trying to open the web browser!\n");
 		}
 	}
 
@@ -971,14 +855,10 @@ public class FormScannerModel {
 	public void setLanguage(String name) {
 		configurations.setProperty(FormScannerConfigurationKeys.LANG, name);
 		configurations.store();
-		JOptionPane
-				.showMessageDialog(
-						null,
-						FormScannerTranslation
-								.getTranslationFor(FormScannerTranslationKeys.LANGUAGE_CHANGED),
-						FormScannerTranslation
-								.getTranslationFor(FormScannerTranslationKeys.SETTINGS_POPUP),
-						JOptionPane.INFORMATION_MESSAGE);
+		JOptionPane.showMessageDialog(null,
+				FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.LANGUAGE_CHANGED),
+				FormScannerTranslation.getTranslationFor(FormScannerTranslationKeys.SETTINGS_POPUP),
+				JOptionPane.INFORMATION_MESSAGE);
 	}
 
 	public void resetPoints() {
@@ -1017,46 +897,24 @@ public class FormScannerModel {
 		barcodeNameTemplate = historyBarcodeNameTemplate.get(0);
 		crop = view.getCrop();
 
-		configurations.setProperty(
-				FormScannerConfigurationKeys.THRESHOLD,
-				String.valueOf(threshold));
-		configurations.setProperty(
-				FormScannerConfigurationKeys.DENSITY, String.valueOf(density));
-		configurations.setProperty(
-				FormScannerConfigurationKeys.SHAPE_SIZE,
-				String.valueOf(shapeSize));
-		configurations.setProperty(
-				FormScannerConfigurationKeys.SHAPE_TYPE, shapeType.getName());
-		configurations.setProperty(
-				FormScannerConfigurationKeys.CORNER_TYPE, cornerType.getName());
-		configurations.setProperty(
-				FormScannerConfigurationKeys.FONT_TYPE, fontType);
-		configurations.setProperty(
-				FormScannerConfigurationKeys.FONT_SIZE, fontSize);
-		configurations.setProperty(
-				FormScannerConfigurationKeys.LOOK_AND_FEEL, lookAndFeel);
-		configurations.setProperty(
-				FormScannerConfigurationKeys.RESET_AUTO_NUMBERING,
-				resetAutoNumbering);
-		configurations.setProperty(
-				FormScannerConfigurationKeys.GROUPS_ENABLED, groupsEnabled);
-		configurations.setProperty(
-				FormScannerConfigurationKeys.QUESTION_NAME_TEMPLATE,
-				questionNameTemplate);
-		configurations.setProperty(
-				FormScannerConfigurationKeys.BARCODE_NAME_TEMPLATE,
-				barcodeNameTemplate);
-		configurations.setProperty(
-				FormScannerConfigurationKeys.GROUP_NAME_TEMPLATE,
-				groupNameTemplate);
-		configurations.setProperty(
-				FormScannerConfigurationKeys.HISTORY_GROUP_NAME_TEMPLATE,
+		configurations.setProperty(FormScannerConfigurationKeys.THRESHOLD, String.valueOf(threshold));
+		configurations.setProperty(FormScannerConfigurationKeys.DENSITY, String.valueOf(density));
+		configurations.setProperty(FormScannerConfigurationKeys.SHAPE_SIZE, String.valueOf(shapeSize));
+		configurations.setProperty(FormScannerConfigurationKeys.SHAPE_TYPE, shapeType.getName());
+		configurations.setProperty(FormScannerConfigurationKeys.CORNER_TYPE, cornerType.getName());
+		configurations.setProperty(FormScannerConfigurationKeys.FONT_TYPE, fontType);
+		configurations.setProperty(FormScannerConfigurationKeys.FONT_SIZE, fontSize);
+		configurations.setProperty(FormScannerConfigurationKeys.LOOK_AND_FEEL, lookAndFeel);
+		configurations.setProperty(FormScannerConfigurationKeys.RESET_AUTO_NUMBERING, resetAutoNumbering);
+		configurations.setProperty(FormScannerConfigurationKeys.GROUPS_ENABLED, groupsEnabled);
+		configurations.setProperty(FormScannerConfigurationKeys.QUESTION_NAME_TEMPLATE, questionNameTemplate);
+		configurations.setProperty(FormScannerConfigurationKeys.BARCODE_NAME_TEMPLATE, barcodeNameTemplate);
+		configurations.setProperty(FormScannerConfigurationKeys.GROUP_NAME_TEMPLATE, groupNameTemplate);
+		configurations.setProperty(FormScannerConfigurationKeys.HISTORY_GROUP_NAME_TEMPLATE,
 				StringUtils.join(historyGroupNameTemplate, HISTORY_SEPARATOR));
-		configurations.setProperty(
-				FormScannerConfigurationKeys.HISTORY_QUESTION_NAME_TEMPLATE,
+		configurations.setProperty(FormScannerConfigurationKeys.HISTORY_QUESTION_NAME_TEMPLATE,
 				StringUtils.join(historyQuestionNameTemplate, HISTORY_SEPARATOR));
-		configurations.setProperty(
-				FormScannerConfigurationKeys.HISTORY_BARCODE_NAME_TEMPLATE,
+		configurations.setProperty(FormScannerConfigurationKeys.HISTORY_BARCODE_NAME_TEMPLATE,
 				StringUtils.join(historyBarcodeNameTemplate, HISTORY_SEPARATOR));
 		configurations.store();
 
@@ -1126,12 +984,10 @@ public class FormScannerModel {
 	public void setLastPosition(Frame frame, Rectangle position) {
 		Frame frm = Frame.valueOf(frame.name());
 
-		String[] positions = { String.valueOf(position.x),
-				String.valueOf(position.y), String.valueOf(position.width),
+		String[] positions = { String.valueOf(position.x), String.valueOf(position.y), String.valueOf(position.width),
 				String.valueOf(position.height) };
 
-		configurations.setProperty(
-				frm.getConfigurationKey(), StringUtils.join(positions, ','));
+		configurations.setProperty(frm.getConfigurationKey(), StringUtils.join(positions, ','));
 		configurations.store();
 
 		switch (frm) {
